# midas3

./: .gitignore
Desktop/면접ai 프로토타입/: start.bat  (+1 more)
Desktop/면접ai 프로토타입/interview-ai/analysis/: pyproject.toml
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/: __init__.py  pipeline.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/audio/: confidence_metrics.py  delivery_metrics.py  feature_extractor.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/feedback/: generator.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/scoring/: rubric.py  scorer.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/structure/: star_analyzer.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/stt/: transcriber.py  vad.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/text/: filler_detector.py  preprocessor.py  repetition_detector.py  self_correction_detector.py
Desktop/면접ai 프로토타입/interview-ai/analysis/analysis/timeseries/: emotional_tracker.py
Desktop/면접ai 프로토타입/interview-ai/backend/: Dockerfile  Dockerfile.worker  alembic.ini  create_tables.py  pyproject.toml  requirements-local.txt  seed_local.py
Desktop/면접ai 프로토타입/interview-ai/backend/alembic/: env.py
Desktop/면접ai 프로토타입/interview-ai/backend/alembic/versions/: 001_initial_schema.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/: config.py  dependencies.py  main.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/core/: database.py  security.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/models/: __init__.py  analysis_result.py  answer.py  interview_session.py  question.py  score.py  user.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/schemas/: analysis.py  dashboard.py  interview.py  user.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/services/: interview_service.py  question_service.py  tts_service.py
Desktop/면접ai 프로토타입/interview-ai/backend/app/tasks/: analysis_task.py  celery_app.py
(+3934 files in other folders)
