[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "interview-ai-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "kiwipiepy>=0.17.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "anthropic>=0.26.0",
    "structlog>=24.1.0",
    "aiofiles>=23.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]
