[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "interview-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "minio>=7.2.0",
    "openai>=1.30.0",
    "anthropic>=0.26.0",
    "edge-tts>=6.1.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
all = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "kiwipiepy>=0.17.0",
    "sentence-transformers>=3.0.0",
    "praat-parselmouth>=0.4.3",
]
worker = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
